Added: config for deploy API Service to Vercel
